Consolidated distinct attributes into a class - DRY
